# qpes

./: ampel_config.yml  consecutive_increase.ipynb  pyproject.toml  run_ampel.py  timewise_config.yml  timewise_config_AT2019.yml  timewise_config_AT2019_ampel_job.yml  timewise_config_ampel_job.yml
ampel/qpes/: T2FindQPEs.py
conf/: ampel.yml
