[project]
name = "qpes"
version = "0.1.0"
description = ""
authors = [
    {name = "Emory Murff",email = "emory.murff@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ampel-interface == 0.10.5a4",
    "timewise[ampel] == 1.0.0a6"
]

[tool.poetry]
packages = [{include = "qpes"}]

include = [
    {path = "conf/**/*.yml"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
